# digibaro

./: .gitmodules  README  baro.org  config.sh  elec.org  projectPlan.org  toolchain.org  upload.sh
hardware/baro/: baro.pro  baro.sch
src/: CMakeLists.txt
src/DigitalBaro/: Bmp085.cpp  Bmp085.h  CMakeLists.txt  CMakeLists.txt~  DigitalBaro.cpp  Ds3231.cpp  Ds3231.h  Pressure_BMP085.cpp  Pressure_BMP085.h  RTC_DS3231.cpp  RTC_DS3231.h  WeatherLcdGraph.cpp  WeatherLcdGraph.h  WeatherSample.h  testFonts.cpp
src/DigitalBaro/tests/: CMakeLists.txt  testDeciPascal.cpp  testRtcInterrupts.cpp  testWeatherLcdGraph.cpp
src/cmake/: Arduino.cmake  AvrGcc.cmake  ProMini.cmake  Uno.cmake
src/cores/: CMakeLists.txt
src/dogmTests/: CMakeLists.txt  Fonts.cpp  GraphicTest.cpp
src/experiments/: CMakeLists.txt  testDirect.cpp  testTemplate.cpp  testVirtual.cpp
src/libraries/: CMakeLists.txt
src/libraries/Dogm/: CMakeLists.txt  Dogm.cpp
src/libraries/Dogm/tests/: CMakeLists.txt  DogmFonts.cpp  FontSpeed.cpp  GraphicTest.cpp
src/libraries/Dogm/utility/: dogm128.c  dogm128.h  dogmfont.h  dogmspi.c  font_04B_25.c  font_atomicsc.c  libinfo.c
src/libraries/Dogm/utility/tests/: dogm128.c~  dogmspi.c
src/libraries/ST7565/: ST7565.cpp  ST7565.h
src/libraries/Time/: DateStrings.cpp
